[gd_scene load_steps=2 format=3 uid="uid://basowgibu12rw"]

[ext_resource type="Script" path="res://main.gd" id="1_ol88w"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ol88w")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(400, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "Atlas to single images"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cut into : "

[node name="height" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "height"

[node name="width" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "width"

[node name="ConvertFileButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Convert"

[node name="OpenFileButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "open"

[node name="ExitButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel"

[node name="ImageDock" type="Control" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/VBoxContainer/ImageDock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.370364, 0.370364, 0.370364, 1)

[node name="Image" type="Sprite2D" parent="VBoxContainer/VBoxContainer/ImageDock"]
unique_name_in_owner = true
centered = false

[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/ConvertFileButton" to="." method="_on_convert_file_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/OpenFileButton" to="." method="_on_open_file_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
